# ChatTwin

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml
src/: GradioUI.py  logger.conf
src/ChatTwin/: AbstractModel.py  CachingModel.py  ChatTwinModel.py  GradioUI copy.py  GradioUI.py  Models.py  MyBio.py  Pushover.py  Weather.py
src/ExternalServices/: Weather.py
src/Models/: ChatTwinModel.py
src/chattwin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: db_config.yaml  logger.conf
src/embeddings/: AbstractEmbeddingModel.py  ChonkieSemanticEmbedding.py  OpenAIEmbeddingModel.py
src/externalservices/: Pushover.py
src/model/: AbstractModel.py  ChatTwinModel.py  OpenAIModel.py  llama3.py
src/utils/: DBUtils.py  FileProcessor.py  LoggerInit.py
src/vectordb/: AbstractDB.py  DBWrapper.py
src/vo/: Models.py  MyBio.py
