[project]
name = "chattwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.5.1",
    "instructor>=1.14.5",
    "litellm>=1.81.11",
    "ollama>=0.6.1",
    "openai>=2.21.0",
    "pushover>=0.5",
    "pydantic>=2.12.5",
]

